syntax = "proto3";
package roadmunk;

message UserUpdatedMessage {
  string id = 1;
  string account = 2;
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
  string email = 6;
  bool has_verified_email = 7;
  string job_title = 8;
  string avatar_image = 9;
  string account_role = 10;
  int64 inactive_on = 11;

  message OnboardingFlag {
    string current_signup_step = 1;
    bool force_attach_saml = 2;
  }

  OnboardingFlag onboarding_flags = 12;
  string invited_by = 13;
  string default_authentication_provider_type = 14;
}